--- a/CVSS_Overlay.csproj
+++ b/CVSS_Overlay.csproj
@@ -2,5 +2,6 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
+    <RootNamespace>CVSS_Overlay</RootNamespace>
   </PropertyGroup>
 </Project>
