DeWarning, moving api into generic repo

--- a/CVSS_Overlay.csproj
+++ b/CVSS_Overlay.csproj
@@ -3,5 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>CVSS_Overlay</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CVSS_GodotCommons\CVSS_GodotCommons.csproj" />
+  </ItemGroup>
 </Project>
